@@ -1,5 +1,6 @@
 
 2020-03-09 Franz Holzinger <franz@ttproducts.de>
+    * new feature: Debug DBALException exception
     * new feature: LEVEL_EXCEPTION
 
 2020-02-11 Franz Holzinger <franz@ttproducts.de>
